# factus-mcp-server-challenge-

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  opencode.json  pyproject.toml
.agents/skills/httpx-patterns/: SKILL.md
.agents/skills/mcp-server-python/: SKILL.md
.agents/skills/sqlmodel-async/: SKILL.md
.atl/: skill-registry.md
openspec/: config.yaml
openspec/changes/factus-core-infrastructure/: apply-progress.md  design.md  proposal.md  tasks.md
scripts/: explore_factus_api.py  test_factus_connection.py
src/core/: config.py  constants.py
src/infrastructure/: database.py  factus_client.py
src/mcp_server/: __init__.py  main.py
src/schemas/: __init__.py  dto.py  models.py
src/services/: __init__.py  adjustment_note_service.py  company_service.py  credit_note_service.py  customer_service.py  enrich.py  establishment_service.py  invoice_service.py  mappers.py  numbering_range_service.py  product_service.py  support_document_service.py  validators.py
tests/: test_client.py  test_config.py  test_constants.py
tests/test_integration/: conftest.py  test_auth.py  test_read_endpoints.py  test_validate_endpoints.py
tests/test_mcp_server/: conftest.py  test_main.py  test_prompts.py  test_resources.py  test_tools.py
tests/test_services/: __init__.py  test_adjustment_note_service.py  test_credit_note_service.py  test_customer_service.py  test_invoice_service.py  test_mappers.py  test_numbering_range_service.py  test_product_service.py  test_support_document_service.py  test_validators.py
(+61 files in other folders)
